testdata/scenarios/02_1-single-policy/k8s/api_developer-example-com-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: api-example-com
  namespace: kgateway-system
  labels:
    app: apis
spec:
  parentRefs:
    - name: gw
      namespace: kgateway-system
  hostnames:
    - "api.example.com"
    - "developer.example.com"
  rules:
  - backendRefs:
    - name: httpbin
      namespace: httpbin
      port: 8000
