testdata/scenarios/02_1-single-policy/k8s/transformation-ektp.yaml
apiVersion: enterprisekgateway.solo.io/v1alpha1
kind: EnterpriseKgatewayTrafficPolicy
metadata:
  name: transformation
  namespace: kgateway-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: api-example-com
  entTransformation:
    stages:
      regular:
        requests:
          - transformation:
              template:
                bodyTransformation:
                  type: Passthrough
                headersToAppend:
                - key: x-season
                  value: 'winter'
